--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <main>
     <section class="hero" id="top">
       <div class="hero-content">
+
+        <img src="JT_Trauma_Logo.png" alt="Hero image" class="hero-image">
+        
         <h1>Rapid Trauma Therapy for Modern Professionals</h1>
         <p>
           Discreet, high‑quality trauma‑informed therapy sessions, available online and in person. 
